--- a/styles.css
+++ b/styles.css
@@ -324,7 +324,7 @@ main {
     background-color: var(--transparent);
 }
 
-.actions-container button {
+.action-icon {
     transition-duration: 200ms;
     border: none;
     background: transparent;
