Allow user to click off of editable text input in order to save to localStorage

--- a/styles.css
+++ b/styles.css
@@ -309,6 +309,7 @@ main {
 }
 
 .meal-details {
+    display: inline-block;
     width: 100%;
 }
 
@@ -407,7 +408,7 @@ main {
 
 .fa-solid {
     background-color: var(--transparent);
-    color: var(--light-grey);
+    color: var(--accent-color);
     font-size: 1.1em;
 }
 
