--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Outfit:wght@300;400;600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"');
 
+* {
+    box-sizing: border-box;
+    font-family: "Outfit", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    color: var(--text-primary);
+}
 
 :root {
     --primary-color: #f5f6f7;
-    --accent-color: #5a7d7c;
+    --accent-color: #18296d;
     --accent-translucent: #5a7d7c2a;
     --offset: #e2e6ea;
     --menu: rgba(255, 255, 255, 0.95);
     --transparent: rgba(0, 0, 0, 0);
     --primary-text-color: #2e2e2e;
-    --secondary-text-color: #5a7d7c;
+    --secondary-text-color: #18296d;
     --button-active: #3b5554;
     --transparent: #00000000;
 }
@@ -23,11 +28,6 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-}
-
-* {
-    font-family: "Kalam", "Outfit", Arial;
-    color: var(--light-grey);
 }
 
 html {
@@ -231,6 +231,7 @@ legend {
 .ingredients-text {
     align-items: center;
     text-align: center;
+    justify-content: center;
     padding-bottom: 30px;
     opacity: 0;
     font-size: 1.5em;
@@ -311,6 +312,11 @@ main {
 .meal-details {
     display: inline-block;
     width: 100%;
+}
+
+.meal-row {
+    display: flex;
+    justify-content: space-between;
 }
 
 .actions-container {
