--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,19 @@ header {
     height: 6rem;
 }
 
+.import-export-buttons {
+    display: flex;
+    margin-left: auto;
+    right: 3em;
+    gap: 0.8em;
+}
+
 h1 {
-    opacity: 0;
-    margin-top: 27.5px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
     font-size: 2em;
     color: var(--accent-color);
     text-align: center;
@@ -78,15 +88,25 @@ h1 {
 
 .button-neutral {
     background-color: var(--accent-color);
-    font-size: 1.5em;
+    font-size: 1em;
     color: var(--primary-color);
     margin: auto 0;
     border: solid var(--accent-color) 2px;
     padding-inline: 25px;
     border-radius: 10px;
-    line-height: 3em;
+    line-height: 2em;
     height: auto;
     opacity: 1;
+}
+
+.button-small {
+    font-size: 1em;
+    line-height: 2.5em;
+}
+
+.button-large {
+    font-size: 1.5em;
+    line-height: 3em;
 }
 
 .button-neutral:hover {
@@ -100,13 +120,16 @@ h1 {
 
 .sidebar-hamburger {
     position: absolute;
-    font-size: 2em;
+    top: 50%;
+    left: 2rem;
+    transform: translateY(-50%);
+    font-size: 3em;
     cursor: pointer;
     color: var(--accent-color);
     border: none;
     background-color: var(--transparent);
-    left: 2rem;
 }
+
 
 .generated-meals {
     display: flex;
@@ -114,7 +137,6 @@ h1 {
     justify-content: center;
     align-items: center;
     margin-inline: 2rem;
-    
 }
 
 .button-tray {
